Partial tests for UserNamesService